--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,5 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
@@ -16,9 +15,7 @@
 #container p {
   font-size: 16px;
   line-height: 22px;
-
   color: #8c8c8c;
-
   margin: 0;
 }
 
@@ -28,4 +25,40 @@
 
 ion-content ion-toolbar {
   --background: translucent;
+}
+
+.horizontal-scroll {
+  overflow: auto;
+  white-space: nowrap;
+  background-color: #b71c1c;
+}
+
+.horizontal-card-scroll {
+  overflow: auto;
+  white-space: nowrap;
+}
+
+.card-content-para {
+  white-space: normal;
+}
+
+.card-ion-top-items {
+  margin-top: -15px;
+  margin-left: -18px;
+}
+
+.card-image {
+  padding-left: 7px;
+  padding-right: 7px;
+  margin-top: -7px;
+}
+
+.card-footer {
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+.card-footer-padding {
+  padding-left: 10px;
+  padding-right: 10px;
 }
