--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -34,8 +34,16 @@ ion-content ion-toolbar {
 }
 
 .horizontal-card-scroll {
-  overflow: auto;
+  overflow-x: scroll;
+  overflow-y: hidden;
   white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  .card {
+    display: inline-block;
+  }
 }
 
 .card-content-para {
