twitter ui change

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -58,7 +58,7 @@
         style="width: 180px; height: 150px; align-content: center;"
       />
       <ion-card-content>
-        <p class="card-content-para">
+        <p class="card-content-para-twit">
           {{twit.Text}}
         </p>
       </ion-card-content>
