--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -56,7 +56,11 @@ ion-chip.ion-color.ion-color-light.ios.ion-activatable.hydrated {
     
   }
 }
-
+.card-content-para-twit
+{
+  white-space: normal;
+  height: calc(21vh - 68px); 
+}
 .card-content-para {
   white-space: normal;
   height: calc(35vh - 68px); 
